--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./css/laptop.css" />
     <link rel="stylesheet" href="./css/tablet.css" />
     <link rel="stylesheet" href="./css/mobile.css" />
@@ -62,8 +68,8 @@
         <div class="form-email">
           <input id="email" placeholder="Enter email" autocomplete="on" />
           <label for="email">Hãy nhập email để xác thực</label>
-          <p class="notify1 hidden">Please fill out this field</p>
-          <p class="notify2 hidden">Email format is invalid</p>
+          <p class="notify1 hidden bg-warning text-dark">Please fill out this field</p>
+          <p class="notify2 hidden bg-warning text-dark">Email format is invalid</p>
           <button id="btn-submit">Submit</button>
         </div>
         <div class="my-info hidden">
@@ -425,5 +431,10 @@
       </div>
     </section>
     <script src="./javascript/script.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
